--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       trevor $
     </title>
     <meta name="author" content="TW2015">
-    <meta name="description" content="trevor $ producer of beats">
+    <meta name="description" content="trevor $ producer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
     <link rel="stylesheet" href="/css/tachyons.min.css">
@@ -38,7 +38,7 @@
     <main class="Site-content mam" id="vm"> 
 
       <div id='okshadow' v-component="plangular" class="v-base-l ptl-ns w-60 center">
-          <h2 class="center m0 mbs"> trevor <span style="color: #009C5E">$</span> </h2>
+          <h2 class="center m0 mbs"> trevor <span style="color: #E1AE1F">$</span> </h2>
           <h3 class="center m0 mbs current-track tegaki"> {{ player.currentTrack.title || '&nbsp;' }} </h3>
           <div class="table mb1 rounded">
             <div class="table-cell px2">
