fixed that botch

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="../js/okshadow.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/vue/0.10.6/vue.min.js"></script>
-    <script src="http://jxnblk.com/plangular/v-plangular.min.js"></script>
+    <script src="../js/v-plangular.min.js"></script>
   </head>
   <body class="wi-100 Site">
 
