--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       trevor $
     </title>
     <meta name="author" content="TW2015">
-    <meta name="description" content="Xnlvg is an arts collective">
+    <meta name="description" content="Music producer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
     <link rel="stylesheet" href="/css/tachyons.min.css">
@@ -30,7 +30,7 @@
     </script>
 
     <header>
-      <h1 class='clip'> xnlvg - music arts etc., sometimes in kansas city </h1>
+      <h1 class='clip'>producer for the internet </h1>
     </header>
       
 
