--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       trevor $
     </title>
     <meta name="author" content="TW2015">
-    <meta name="description" content="trevor $ producer">
+    <meta name="description" content="trevor $ music producer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
     <link rel="stylesheet" href="/css/tachyons.min.css">
@@ -74,7 +74,7 @@
     </script>
 
     <header>
-      <h1 class='clip'> xnlvg - music arts etc., sometimes in kansas city </h1>
+      <h1 class='clip'>trevor $ music producer</h1>
     </header>
       
           <h2 class="center m1 mbs"> trevor <span style="color: #E1AE1F">$</span> </h2>
@@ -132,7 +132,7 @@
 
 
 
-      <p>kansas city / la</p>
+      <p>chicago / la</p>
 
 
     </main>
