--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h2 class="center m1 mbs"> trevor <span style="color: #E1AE1F">$</span> </h2>
   
     <main id="okshadow" class="Site-content mam" id="vm"> 
-    <div plangular="http://soundcloud.com/trevormoney/sets/a2015" class="mb3 bg-darken-2 rounded">
+    <div plangular="https://soundcloud.com/trevormoney/sets/2015instrumentals" class="mb3 bg-darken-2 rounded">
   <div class="p2" >
     <div class="flex flex-center">
       <h4 class="m0 flex-auto">{{playlist.user.username}}</h4>
