--- a/index.html
+++ b/index.html
@@ -79,63 +79,7 @@
       
           <h2 class="center m1 mbs"> trevor <span style="color: #E1AE1F">$</span> </h2>
   
-    <main id="okshadow" class="Site-content mam" id="vm"> 
-    <div plangular="https://soundcloud.com/trevormoney/sets/pendleton-heights" class="mb3 bg-darken-2 rounded">
-  <div class="p2" >
-    <div class="flex flex-center">
-      <h4 class="m0 flex-auto">{{playlist.user.username}}</h4>
-      <samp class="h6">{{ currentTime | hhmmss }} / {{ duration | hhmmss }}</samp>
-    </div>
-    <h3 class="h1 caps mt0">{{playlist.title}}</h3>
-    <div class="flex flex-center">
-      <button class="flex-none h3 button button-narrow button-transparent button-grow rounded"
-        title="Play Previous Track"
-        ng-click="previous()">
-        <svg class="icon geomicon" data-icon="previous" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 H8 V14 L28 4 V28 L8 18 V28 H4 z "></path></svg>
-      </button>
-      <button class="flex-none h1 button button-transparent button-grow rounded"
-        title="Play/Pause"
-        ng-click="playPause(index)">
-        <svg ng-if="player.playing !== track.src" class="icon geomicon" data-icon="play" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor"><path d="M4 4 L28 16 L4 28 z "></path></svg>
-        <svg ng-if="player.playing === track.src" class="icon geomicon" data-icon="pause" viewBox="0 0 32 32" width="32" height="32" style="fill:currentcolor"><path d="M4 4 H12 V28 H4 z M20 4 H28 V28 H20 z "></path></svg>
-      </button>
-      <button class="flex-none h3 button mr2 button-narrow button-transparent button-grow rounded"
-        title="Play Next Track"
-        ng-click="next()">
-        <svg class="icon geomicon" data-icon="next" viewBox="0 0 32 32" style="fill:currentcolor"><path d="M4 4 L24 14 V4 H28 V28 H24 V18 L4 28 z "></path></svg>
-      </button>
-      <progress
-        class="progress"
-        ng-click="seek($event)"
-        ng-value="currentTime / duration || 0">
-        {{ currentTime / duration }}
-      </progress>
-    </div>
-  </div>
-  <ul class="list-reset">
-    <li ng-repeat="track in tracks">
-      <button
-        class="flex flex-center full-width left-align button button-transparent"
-        title="Play {{track.title}}"
-        ng-class="{'is-active': player.playing === track.src }"
-        ng-click="playPause($index)">
-        <span class="flex-auto">
-          {{track.user.username}} - {{track.title}}
-        </span>
-        <span class="h6">
-          {{ track.duration / 1000 | hhmmss }}
-        </span>
-      </button>
-    </li>
-  </ul>
-</div>
-
-
-
-      <p>chicago / la</p>
-
-
-    </main>
+    <main id="okshadow" class="Site-content mam" id="vm"><iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/149865462&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe></main>
 
 
   
