a little style at least damnit

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script src="../js/okshadow.min.js"></script>
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/vue/0.10.6/vue.min.js"></script>
+    <!-- // <script src="//cdnjs.cloudflare.com/ajax/libs/vue/0.10.6/vue.min.js"></script> -->
 
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+<!-- <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script> -->
 
-<script src="http://d2v52k3cl9vedd.cloudfront.net/plangular/3.0.1/plangular.min.js"></script>
+<!-- <script src="http://d2v52k3cl9vedd.cloudfront.net/plangular/3.0.1/plangular.min.js"></script> -->
   </head>
   <body class="wi-100 Site" ng-app="app">
 
@@ -79,7 +79,9 @@
       
           <h2 class="center m1 mbs"> trevor <span style="color: #E1AE1F">$</span> </h2>
   
-    <main id="okshadow" class="Site-content mam" id="vm"><iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/149865462&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe></main>
+    <main id="okshadow" class="Site-content mam" id="vm">
+    <iframe width="100%" height="100%" scrolling="yes" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/149865462&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+    </main>
 
 
   
