--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h2 class="center m1 mbs"> trevor <span style="color: #E1AE1F">$</span> </h2>
   
     <main id="okshadow" class="Site-content mam" id="vm">
-    <iframe width="100%" height="450px" scrolling="yes" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/149865462&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_reposts=false&amp;visual=false"></iframe>
+    <iframe width="100%" height="450px" scrolling="yes" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/149865462&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_playcount=false&amp;show_reposts=false&amp;visual=false"></iframe>
 
     </main>
 
@@ -97,12 +97,6 @@
 
     </footer>
 
-        <script>
-    var app = angular.module('app', ['plangular'])
-      .config(function(plangularConfigProvider){
-        plangularConfigProvider.clientId = '4a5d77108f0a3cecd88cfb61abd41b79';
-      });
-  </script>
 
   </body>
 </html>
