--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>
       trevor $
     </title>
-    <meta name="author" content="TW2015">
+    <meta name="author" content="trevor $">
     <meta name="description" content="trevor $ music producer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
@@ -91,6 +91,8 @@
 
       <div class="tc">
 
+        <small>  <a href="mailto:trevor.money@xnlvg.com" style="text-decoration: none; color: #2D2D2D; background-color: white;" target="_blank" class='button'>contact</a>  </small>
+        <br><br>
         <small> an <a href="http://xnlvg.com" style="text-decoration: none; color: #2D2D2D" target="_blank">xnlvg</a> worldview </small>
 
       </div>
