--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <small>  <a href="mailto:trevor.money@xnlvg.com" style="text-decoration: none; color: #2D2D2D; background-color: white;" target="_blank" class='button'>contact</a>  </small>
         <br><br>
-        <small> an <a href="http://xnlvg.com" style="text-decoration: none; color: #2D2D2D" target="_blank">xnlvg</a> worldview </small>
+        <small> an <a href="http://www.xnlvg.com" style="text-decoration: none; color: #2D2D2D" target="_blank">xnlvg</a> worldview </small>
 
       </div>
 
