--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <title>
-      trevor $
+      trevor $ music producer
     </title>
-    <meta name="author" content="trevor $">
+    <meta name="author" content="trevor $ music">
     <meta name="description" content="trevor $ music producer">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
@@ -83,6 +83,43 @@
     <iframe width="100%" height="450px" scrolling="yes" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/149865462&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=true&amp;show_playcount=false&amp;show_reposts=false&amp;visual=false"></iframe>
 
     </main>
+
+    <section>
+
+    <!-- Pitchfork press on Higher by Trevor $ -->
+
+    <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Listen to <a href="https://twitter.com/chancetherapper">@chancetherapper</a> and <a href="https://twitter.com/BrianFresco">@BrianFresco</a>’s new song “Higher” <a href="https://t.co/0R1oa1Djeg">https://t.co/0R1oa1Djeg</a> <a href="https://t.co/8HMGDgq1Tr">pic.twitter.com/8HMGDgq1Tr</a></p>&mdash; Pitchfork (@pitchfork) <a href="https://twitter.com/pitchfork/status/747869769244745729">June 28, 2016</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+    <!-- MTV News -->
+    <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">If You Like ‘One Dance,’ You’ll Love Brian Fresco And Chance The Rapper’s ‘Higher’ <a href="https://t.co/6kMJQGLKGB">https://t.co/6kMJQGLKGB</a> <a href="https://t.co/VT0ehlzzSw">pic.twitter.com/VT0ehlzzSw</a></p>&mdash; MTV News (@MTVNews) <a href="https://twitter.com/MTVNews/status/748019537015078914">June 29, 2016</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+    <!-- Chance -->
+    <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Brian Fresco <a href="https://twitter.com/hashtag/Cassanova?src=hash">#Cassanova</a> <a href="https://twitter.com/hashtag/HIGHER?src=hash">#HIGHER</a> ft Me The Rapper <a href="https://t.co/U4TNZQRB2T">https://t.co/U4TNZQRB2T</a></p>&mdash; Lil Chano From 79th (@chancetherapper) <a href="https://twitter.com/chancetherapper/status/748104694619344896">June 29, 2016</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<!-- Who produced Higher? Trevor $! -->
+
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">My brother and the executive producer of <a href="https://twitter.com/hashtag/Casanova?src=hash">#Casanova</a> <a href="https://twitter.com/trevorwelch">@trevorwelch</a>  <a href="https://t.co/9FMb4xuPc7">https://t.co/9FMb4xuPc7</a></p>&mdash; #Casanova (@BrianFresco) <a href="https://twitter.com/BrianFresco/status/748018144267100160">June 29, 2016</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+    <!--  RedEye  -->
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">.<a href="https://twitter.com/BrianFresco">@BrianFresco</a>’s <a href="https://twitter.com/hashtag/Casanova?src=hash">#Casanova</a> is one of Chicago’s best mixtapes of the year. <br><br>Listen here: <a href="https://t.co/3fRWiIQYVo">https://t.co/3fRWiIQYVo</a> <a href="https://t.co/ufvgkmHw8g">pic.twitter.com/ufvgkmHw8g</a></p>&mdash; RedEye (@redeyechicago) <a href="https://twitter.com/redeyechicago/status/750359341199335424">July 5, 2016</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<!-- idolator -->
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">.<a href="https://twitter.com/chancetherapper">@chancetherapper</a>, <a href="https://twitter.com/BrianFresco">@BrianFresco</a> &amp; <a href="https://twitter.com/trubluhawaii">@trubluhawaii</a> made one of 2016&#39;s most unpredictable songs <a href="https://t.co/DktbygvBox">https://t.co/DktbygvBox</a> <a href="https://t.co/W4qjaYLVYn">pic.twitter.com/W4qjaYLVYn</a></p>&mdash; idolator (@idolator) <a href="https://twitter.com/idolator/status/748958210355294208">July 1, 2016</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+
+<!-- HypeM Number 1 song --> 
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">&quot;Higher feat. Chance The Rapper and B...&quot; by Brian Fresco <a href="https://t.co/3OyPKZKNK3">https://t.co/3OyPKZKNK3</a> is now #1 on the main chart: <a href="https://t.co/eldC3lNmhI">https://t.co/eldC3lNmhI</a></p>&mdash; Hype Machine (@hypem) <a href="https://twitter.com/hypem/status/749271428915015681">July 2, 2016</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+    <!--  Chicago reader  -->
+    <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Save Money rapper <a href="https://twitter.com/BrianFresco">@BrianFresco</a> realizes his ambition with &#39;Casanova.&#39;<a href="https://t.co/FjSwd3MJ2w">https://t.co/FjSwd3MJ2w</a> <a href="https://t.co/cgySwrwbcP">pic.twitter.com/cgySwrwbcP</a></p>&mdash; Chicago Reader (@Chicago_Reader) <a href="https://twitter.com/Chicago_Reader/status/751070783028420610">July 7, 2016</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
   
