--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     </main>
 
-    <section>
+    <section class='mam'>
 
     <!-- Pitchfork press on Higher by Trevor $ -->
 
@@ -119,6 +119,11 @@
 
     <!--  Chicago reader  -->
     <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Save Money rapper <a href="https://twitter.com/BrianFresco">@BrianFresco</a> realizes his ambition with &#39;Casanova.&#39;<a href="https://t.co/FjSwd3MJ2w">https://t.co/FjSwd3MJ2w</a> <a href="https://t.co/cgySwrwbcP">pic.twitter.com/cgySwrwbcP</a></p>&mdash; Chicago Reader (@Chicago_Reader) <a href="https://twitter.com/Chicago_Reader/status/751070783028420610">July 7, 2016</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+<!-- Vic Mensa -->
+
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">. <a href="https://twitter.com/BrianFresco">@BrianFresco</a> <a href="https://twitter.com/hashtag/Casanova?src=hash">#Casanova</a> available now. <a href="https://t.co/2r12OOz9xE">https://t.co/2r12OOz9xE</a> young men of color with goals <a href="https://twitter.com/hashtag/blackexcellence?src=hash">#blackexcellence</a></p>&mdash; still alive (@VicMensa) <a href="https://twitter.com/VicMensa/status/751540434791391232">July 8, 2016</a></blockquote>
 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
